--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ Code.Rproj
 .Rproj.user/C063C9F6/sources/s-2F3DC8DC/lock_file
 .Rproj.user/C063C9F6/sources/s-2F3DC8DC/7B00A235-contents
 .Rproj.user/C063C9F6/sources/s-2F3DC8DC/7B00A235
+.Rproj.user/C063C9F6/sources/s-2F3DC8DC/6BF10999
+.Rproj.user/C063C9F6/sources/s-2F3DC8DC/6BF10999-contents
