--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,3 @@
 
-.Rproj.user/C063C9F6/sources/prop/F4CFD152
-.Rproj.user/C063C9F6/sources/prop/E944F27C
-.Rproj.user/C063C9F6/sources/s-2F3DC8DC/3B907816-contents
-.Rproj.user/C063C9F6/sources/prop/INDEX
-.Rproj.user/C063C9F6/sources/s-2F3DC8DC/6BB02FBE
-.Rproj.user/C063C9F6/sources/s-2F3DC8DC/6BB02FBE-contents
-.Rproj.user/C063C9F6/sources/s-2F3DC8DC/E60A2333
-.Rproj.user/C063C9F6/sources/s-2F3DC8DC/E60A2333-contents
-.Rproj.user/shared/notebooks/patch-chunk-names
-Code.Rproj
-.Rproj.user/C063C9F6/sources/s-2F3DC8DC/lock_file
-.Rproj.user/C063C9F6/sources/s-2F3DC8DC/7B00A235-contents
-.Rproj.user/C063C9F6/sources/s-2F3DC8DC/7B00A235
-.Rproj.user/C063C9F6/sources/s-2F3DC8DC/6BF10999
-.Rproj.user/C063C9F6/sources/s-2F3DC8DC/6BF10999-contents
+.Rproj.user*
+
